package oop;

public interface ISolverQuEq {
    
    AnswerQuEq getSolutionQuEq();
    
}
